fix scrollbar ting

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5734,7 +5734,7 @@ hr.dashed {
 #tour-room-description {
   height: 300px;
   overflow-y: auto;
-  padding: 10px 0px;
+  margin: 10px 0px;
 }
 
 #nav-div button{
